Minor change to remove usage of depreciated code